--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="{{ url_for('static', filename='js/jquery.mousewheel.js') }}"></script>
-<script src="{{ url_for('static', filename='js/jquery.terminal-0.6.3.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.terminal-0.6.3.js') }}"></script>
     
 <script>
 jQuery.fn.center = function () {
@@ -17,7 +17,7 @@ jQuery.fn.center = function () {
     this.css("left", Math.max(0, (($(window).width() - $(this).outerWidth()) / 2) + 
                                                 $(window).scrollLeft()) + "px");
     return this;
-}
+};
 
 $('#mushy_client').css("height", 400);
 $('#mushy_client').css("width", 800);
@@ -52,7 +52,7 @@ jQuery(function($, undefined) {
         width: 800,
         prompt: '> ',
         onExit: function(term) {
-        	if(uid !== undefined && uid != 0) {
+        	if(uid !== undefined && uid !== 0) {
         		$.getJSON($SCRIPT_ROOT + '/_send', {
                     'line': "logout",
                     'uid': uid
@@ -65,7 +65,7 @@ jQuery(function($, undefined) {
     $.getJSON($SCRIPT_ROOT + '/_register', {},
         function(data) {
             uid = (data["uid"]);
-            if (uid == 0) {
+            if (uid === 0) {
             	t.echo("Mushy is currently DOWN. Try again later!");
             }
             else {
